--- a/CASPractice/Views/Shared/_Layout.cshtml
+++ b/CASPractice/Views/Shared/_Layout.cshtml
@@ -21,8 +21,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Public", "Index", "Public")</li>
+                    <li>@Html.ActionLink("Private", "Index", "Private")</li>
                 </ul>
             </div>
         </div>
