made it a little more application friendly

--- a/CASPractice/Views/Private/Index.cshtml
+++ b/CASPractice/Views/Private/Index.cshtml
@@ -3,5 +3,8 @@
     ViewBag.Title = "Index";
 }
 
-<h2>This is the PRIVATE view</h2>
+<h2>This is where you will click to apply</h2>
+
+<h1><a href="https://docs.google.com/forms/d/e/1FAIpQLScUUpcCr_DILgUc-pZzcLLKPez0nxBqTsF-Ay06mAHq0tZ9wA/viewform?vc=0&c=0&w=1" class="btn btn-primary btn-lg">Apply</a></h1>
+
 
