--- a/CASPractice/Views/Shared/_Layout.cshtml
+++ b/CASPractice/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Public", "Index", "Public")</li>
-                    <li>@Html.ActionLink("Private", "Index", "Private")</li>
+                    <li>@Html.ActionLink("Apply", "Index", "Private")</li>
                 </ul>
             </div>
         </div>
